--- a/hw-1/movie.css
+++ b/hw-1/movie.css
@@ -1,58 +1,53 @@
-*{
+body {
 	background-image: url("images/background.png");
-	font-size: 12pt;
 	font-family: Arial, Helvetica, sans-serif;
-	padding: none;
+	font-size: 12pt;
 	border: none;
-	margin: 0px;
-	}
-body{
-	background-color: #eeeeee;
-}
-#traka{
-	position: absolute;
-    right: 380px;
-	width: 200px;
-    padding-top: 0px;
-	height: 1000px;
+	padding: none;
+	width: 55%;
+	margin: 0 auto;
+
 }
 h1{
-	font-size: bold;
+	text-align: center;
 	font-size: 24pt;
+	font-style: bold;
 	font-family: Georgia, Times New Roman, serif;
 	text-shadow: 3px 3px #999999;
-	text-align: center;
 }
 #telo{
 	background-color: #EEEEEE;
 	border: 5px solid #EEEEEE;
-	border-spacing: 5px;
-	box-align: center; 
-	float: left;
-	width: 55%; 
-	position: relative;
-	margin: auto;
+	padding: 5px;
+	flex: 2 0 0;
 }
-/*footer{
+.flex-container {
+  display: flex;
+}
+.flex-container > div {
+  margin: 0px;
+}
+#traka{
+	flex: 1 0 0;
 	background-color: #A2B964;
-	border-spacing: 0.5em;
-	border: 1px solid #A2B964;
-	position: bottom;
-	padding-bottom: 10px;
-	
-}*/
-#ba{
-	background-image: url("images/rbg.png");
-	border-bottom: 1em;
-	color: red;
-	position: relative;
-	width: 2000px;
-	
+	border-spacing: 15px;
+	font-size: 12pt;
+	font-family: Arial, Helvetica, sans-serif;
 }
-#procenat{
-	background-image: url("images/rbg.png");
+footer{
+	background-color: #A2B964;
+	padding: 0.5em;
+	text-align: center;
+}
+#baner {
+	background-repeat: repeat-x;
+	padding-bottom: 1rem;
 	font-size: 48pt;
-	font-style: bold;
+	font-weight: bold;
+	color: red;
+	padding: 0px;
+	background-image: url("images/rbg.png");
+	text-align: left;
 }
 *.quotebubble {
 	background-color: #FFFFFF;
@@ -60,4 +55,25 @@ h1{
 	font-family: Georgia, Times New Roman, serif;
 	width: 90%;
 	border: 2px solid #CCCCCC;
-};
+	border-radius: 12px;
+	padding: 1em;
+}
+.publication{
+		font-size: 13pt;
+		font-style: italic;
+}
+dl{
+	font-weight: bold;
+	line-height: 1.5; 
+}
+li {
+	list-style-type: none;
+	margin: 0;
+    padding: 0;
+	text-indent: 0px;
+}
+#w3c {
+	position:absolute;
+	right: 0px;
+    z-index: -1;
+}
